# app/src/main/java/io/swagger/server/models/SwipeBody.kt
@@ -11,6 +11,8 @@
  */
 package io.swagger.server.models
 
+import io.swagger.server.models.Point
+
 /**
  *  * @param segments  * @param segmentSteps */
 data class SwipeBody(
